tests/baselines/reference/newFunctionImplicitAny.errors.txt
==== tests/cases/compiler/newFunctionImplicitAny.ts (1 errors) ====
    // No implicit any error given when newing a function (up for debate)
    
    function Test() { }
    var test = new Test();
               ~~~~~~~~~~
!!! newFunctionImplicitAny.ts(4,12): error TS7009: 'new' expression, which lacks a constructor signature, implicitly has an 'any' type.